feat: add currency exchange rates (#55)
