# backend/portfolio-manager/app/api/securities.py
@@ -9,10 +9,6 @@ from flask_jwt_extended import jwt_required
 def search(query):
     current_app.logger.info(f"Search for securities by '{query}'")
     try:
-        if securities_manager.is_update_required():
-            current_app.logger.info("Securities update is needed")
-            securities_manager.update_securities(securities_manager.load_securities())
-
         securities = securities_manager.search_securities(query)
         return securities_schema.dump(securities), 200
     except PortfolioManagerError as error:
